--- a/src/style/input.css
+++ b/src/style/input.css
@@ -1,3 +1,97 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    .button--primary {
+        @apply
+        inline-flex
+        bg-blue-dark
+
+        text-white
+        font-bold
+
+        border-2 border-blue-dark
+
+        rounded-3xl
+
+        px-4 py-2
+
+        cursor-pointer
+
+        hover:opacity-80
+    }
+
+    .button--secondary {
+        @apply
+        bg-white
+
+        text-blue-dark
+        font-bold
+
+        border-2 border-blue-dark
+
+        rounded-3xl
+
+        px-4 py-2
+
+        cursor-pointer
+
+        hover:bg-blue-dark
+        hover:border-white
+        hover:text-white
+    }
+
+    .button--disabled{
+        @apply
+        inline-flex
+
+        bg-gray-400
+
+        rounded-2xl
+
+        px-4 py-2
+
+        border-gray-500
+
+        text-gray-800
+        font-bold
+
+        hover:cursor-not-allowed
+    }
+
+    .button--nav{
+        @apply
+        pr-6
+        w-52
+    }
+
+    .button--back{
+        @apply
+        flex
+        items-center
+
+        border-4 border-white
+    }
+
+    .icon--nav{
+        @apply
+        w-6
+        h-6
+        mr-4
+    }
+
+    .icon--arrow{
+        @apply
+        w-3
+        h-3
+        mr-3
+    }
+}
+
+@layer components {
+    .container--blue-dark{
+        @apply
+        bg-blue-dark
+    }
+}
