--- a/src/style/output.css
+++ b/src/style/output.css
@@ -446,6 +446,99 @@ video {
   display: none;
 }
 
+.button--primary {
+  display: inline-flex;
+  cursor: pointer;
+  border-radius: 1.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 93 168 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 93 168 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.button--primary:hover {
+  opacity: 0.8;
+}
+
+.button--secondary {
+  cursor: pointer;
+  border-radius: 1.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 93 168 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(0 93 168 / var(--tw-text-opacity));
+}
+
+.button--secondary:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 93 168 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.button--disabled {
+  display: inline-flex;
+  border-radius: 1rem;
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+
+.button--disabled:hover {
+  cursor: not-allowed;
+}
+
+.button--nav {
+  width: 13rem;
+  padding-right: 1.5rem;
+}
+
+.button--back {
+  display: flex;
+  align-items: center;
+  border-width: 4px;
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.icon--nav {
+  margin-right: 1rem;
+  height: 1.5rem;
+  width: 1.5rem;
+}
+
+.icon--arrow {
+  margin-right: 0.75rem;
+  height: 0.75rem;
+  width: 0.75rem;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -562,6 +655,40 @@ video {
   position: relative !important;
 }
 
+.z-20 {
+  z-index: 20 !important;
+}
+
+.mx-auto {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
+
+.my-4 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.-ml-24 {
+  margin-left: -6rem !important;
+}
+
+.mb-3 {
+  margin-bottom: 0.75rem !important;
+}
+
+.mb-4 {
+  margin-bottom: 1rem !important;
+}
+
+.mb-8 {
+  margin-bottom: 2rem !important;
+}
+
+.mr-2 {
+  margin-right: 0.5rem !important;
+}
+
 .block {
   display: block !important;
 }
@@ -570,12 +697,129 @@ video {
   display: flex !important;
 }
 
-.flex-wrap {
-  flex-wrap: wrap !important;
+.h-8 {
+  height: 2rem !important;
+}
+
+.w-10 {
+  width: 2.5rem !important;
+}
+
+.w-56 {
+  width: 14rem !important;
+}
+
+.w-full {
+  width: 100% !important;
+}
+
+.max-w-140 {
+  max-width: 35rem !important;
+}
+
+.max-w-7xl {
+  max-width: 80rem !important;
+}
+
+.max-w-96 {
+  max-width: 24rem !important;
+}
+
+.origin-top-right {
+  transform-origin: top right !important;
+}
+
+.-skew-x-20 {
+  --tw-skew-x: -20deg !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.skew-x-20 {
+  --tw-skew-x: 20deg !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.flex-col {
+  flex-direction: column !important;
+}
+
+.items-center {
+  align-items: center !important;
+}
+
+.justify-end {
+  justify-content: flex-end !important;
+}
+
+.justify-center {
+  justify-content: center !important;
+}
+
+.overflow-hidden {
+  overflow: hidden !important;
+}
+
+.rounded-sm {
+  border-radius: 0.125rem !important;
 }
 
 .border {
   border-width: 1px !important;
+}
+
+.bg-blue-dark {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 93 168 / var(--tw-bg-opacity)) !important;
+}
+
+.bg-white {
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+}
+
+.px-6 {
+  padding-left: 1.5rem !important;
+  padding-right: 1.5rem !important;
+}
+
+.py-28 {
+  padding-top: 7rem !important;
+  padding-bottom: 7rem !important;
+}
+
+.py-3 {
+  padding-top: 0.75rem !important;
+  padding-bottom: 0.75rem !important;
+}
+
+.py-8 {
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
+}
+
+.pb-2 {
+  padding-bottom: 0.5rem !important;
+}
+
+.pl-36 {
+  padding-left: 9rem !important;
+}
+
+.pl-6 {
+  padding-left: 1.5rem !important;
+}
+
+.pr-20 {
+  padding-right: 5rem !important;
+}
+
+.pr-4 {
+  padding-right: 1rem !important;
+}
+
+.text-2xl {
+  font-size: 1.5rem !important;
+  line-height: 2rem !important;
 }
 
 .text-3xl {
@@ -583,10 +827,88 @@ video {
   line-height: 2.25rem !important;
 }
 
+.text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
+}
+
 .font-bold {
   font-weight: 700 !important;
 }
 
-.underline {
-  text-decoration-line: underline !important;
+.text-blue-dark {
+  --tw-text-opacity: 1 !important;
+  color: rgb(0 93 168 / var(--tw-text-opacity)) !important;
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1 !important;
+  color: rgb(220 38 38 / var(--tw-text-opacity)) !important;
+}
+
+.text-white {
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
+.after\:absolute::after {
+  content: var(--tw-content) !important;
+  position: absolute !important;
+}
+
+.after\:-right-8::after {
+  content: var(--tw-content) !important;
+  right: -2rem !important;
+}
+
+.after\:top-0::after {
+  content: var(--tw-content) !important;
+  top: 0px !important;
+}
+
+.after\:-z-10::after {
+  content: var(--tw-content) !important;
+  z-index: -10 !important;
+}
+
+.after\:block::after {
+  content: var(--tw-content) !important;
+  display: block !important;
+}
+
+.after\:h-full::after {
+  content: var(--tw-content) !important;
+  height: 100% !important;
+}
+
+.after\:w-12::after {
+  content: var(--tw-content) !important;
+  width: 3rem !important;
+}
+
+.after\:-skew-x-20::after {
+  content: var(--tw-content) !important;
+  --tw-skew-x: -20deg !important;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y)) !important;
+}
+
+.after\:border-b-0::after {
+  content: var(--tw-content) !important;
+  border-bottom-width: 0px !important;
+}
+
+.after\:border-r-0::after {
+  content: var(--tw-content) !important;
+  border-right-width: 0px !important;
+}
+
+.after\:bg-blue-dark::after {
+  content: var(--tw-content) !important;
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 93 168 / var(--tw-bg-opacity)) !important;
+}
+
+.after\:content-empty::after {
+  --tw-content: "" !important;
+  content: var(--tw-content) !important;
 }
