--- a/src/style/input.css
+++ b/src/style/input.css
@@ -29,7 +29,7 @@
         text-blue-dark
         font-bold
 
-        border-2 border-blue-dark
+        border-2 border-white
 
         rounded-3xl
 
@@ -48,7 +48,7 @@
 
         bg-gray-400
 
-        rounded-2xl
+        rounded-3xl
 
         px-4 py-2
 
