--- a/src/style/input.css
+++ b/src/style/input.css
@@ -3,6 +3,12 @@
 @tailwind utilities;
 
 @layer base {
+    .button, a{
+        @apply
+        caret-transparent
+        hover:scale-110
+    }
+
     .button--primary {
         @apply
         inline-flex
@@ -36,10 +42,6 @@
         px-4 py-2
 
         cursor-pointer
-
-        hover:bg-blue-dark
-        hover:border-white
-        hover:text-white
     }
 
     .button--disabled{
@@ -72,6 +74,8 @@
         items-center
 
         border-4 border-white
+
+        hover:opacity-100
     }
 
     .icon--nav{
