--- a/src/style/output.css
+++ b/src/style/output.css
@@ -446,6 +446,16 @@ video {
   display: none;
 }
 
+.button, a {
+  caret-color: transparent;
+}
+
+.button:hover, a:hover {
+  --tw-scale-x: 1.1;
+  --tw-scale-y: 1.1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .button--primary {
   display: inline-flex;
   cursor: pointer;
@@ -485,15 +495,6 @@ video {
   color: rgb(0 93 168 / var(--tw-text-opacity));
 }
 
-.button--secondary:hover {
-  --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity));
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 93 168 / var(--tw-bg-opacity));
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .button--nav {
   width: 13rem;
   padding-right: 1.5rem;
@@ -505,6 +506,10 @@ video {
   border-width: 4px;
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
+.button--back:hover {
+  opacity: 1;
 }
 
 .icon--nav {
@@ -627,10 +632,6 @@ video {
   --tw-contain-style:  ;
 }
 
-.absolute {
-  position: absolute !important;
-}
-
 .relative {
   position: relative !important;
 }
@@ -649,12 +650,25 @@ video {
   margin-bottom: 1rem !important;
 }
 
+.my-auto {
+  margin-top: auto !important;
+  margin-bottom: auto !important;
+}
+
 .-ml-24 {
   margin-left: -6rem !important;
 }
 
+.mb-16 {
+  margin-bottom: 4rem !important;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem !important;
+}
+
+.mb-6 {
+  margin-bottom: 1.5rem !important;
 }
 
 .mb-8 {
@@ -665,20 +679,16 @@ video {
   margin-right: 0.5rem !important;
 }
 
+.mr-4 {
+  margin-right: 1rem !important;
+}
+
 .mt-2 {
   margin-top: 0.5rem !important;
 }
 
 .mt-4 {
   margin-top: 1rem !important;
-}
-
-.mb-4 {
-  margin-bottom: 1rem !important;
-}
-
-.mb-12 {
-  margin-bottom: 3rem !important;
 }
 
 .block {
@@ -691,6 +701,14 @@ video {
 
 .h-8 {
   height: 2rem !important;
+}
+
+.h-full {
+  height: 100% !important;
+}
+
+.min-h-128 {
+  min-height: 32rem !important;
 }
 
 .w-10 {
@@ -715,10 +733,6 @@ video {
 
 .max-w-7xl {
   max-width: 80rem !important;
-}
-
-.max-w-96 {
-  max-width: 24rem !important;
 }
 
 .origin-top-right {
@@ -755,16 +769,16 @@ video {
   justify-content: center !important;
 }
 
+.justify-between {
+  justify-content: space-between !important;
+}
+
 .overflow-hidden {
   overflow: hidden !important;
 }
 
 .rounded-sm {
   border-radius: 0.125rem !important;
-}
-
-.border {
-  border-width: 1px !important;
 }
 
 .border-4 {
@@ -786,9 +800,18 @@ video {
   background-color: rgb(239 68 68 / var(--tw-bg-opacity)) !important;
 }
 
-.bg-white {
-  --tw-bg-opacity: 1 !important;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity)) !important;
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops)) !important;
+}
+
+.from-blue-dark {
+  --tw-gradient-from: #005da8 var(--tw-gradient-from-position) !important;
+  --tw-gradient-to: rgb(0 93 168 / 0) var(--tw-gradient-to-position) !important;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to) !important;
+}
+
+.to-blue-light {
+  --tw-gradient-to: #2ebcfe var(--tw-gradient-to-position) !important;
 }
 
 .px-4 {
@@ -799,6 +822,11 @@ video {
 .px-6 {
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
+}
+
+.py-14 {
+  padding-top: 3.5rem !important;
+  padding-bottom: 3.5rem !important;
 }
 
 .py-2 {
@@ -821,9 +849,9 @@ video {
   padding-bottom: 2rem !important;
 }
 
-.py-14 {
-  padding-top: 3.5rem !important;
-  padding-bottom: 3.5rem !important;
+.py-16 {
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
 }
 
 .pb-2 {
@@ -838,12 +866,24 @@ video {
   padding-left: 1.5rem !important;
 }
 
+.pr-2 {
+  padding-right: 0.5rem !important;
+}
+
 .pr-20 {
   padding-right: 5rem !important;
 }
 
 .pr-4 {
   padding-right: 1rem !important;
+}
+
+.pr-1 {
+  padding-right: 0.25rem !important;
+}
+
+.pl-52 {
+  padding-left: 13rem !important;
 }
 
 .text-2xl {
@@ -856,18 +896,27 @@ video {
   line-height: 2.25rem !important;
 }
 
-.text-xl {
-  font-size: 1.25rem !important;
-  line-height: 1.75rem !important;
-}
-
 .text-4xl {
   font-size: 2.25rem !important;
   line-height: 2.5rem !important;
 }
 
+.text-xl {
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
+}
+
+.text-5xl {
+  font-size: 3rem !important;
+  line-height: 1 !important;
+}
+
 .font-bold {
   font-weight: 700 !important;
+}
+
+.italic {
+  font-style: italic !important;
 }
 
 .text-blue-dark {
@@ -878,11 +927,6 @@ video {
 .text-white {
   --tw-text-opacity: 1 !important;
   color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
-}
-
-.text-blue-light {
-  --tw-text-opacity: 1 !important;
-  color: rgb(46 188 254 / var(--tw-text-opacity)) !important;
 }
 
 .after\:absolute::after {
