--- a/src/style/output.css
+++ b/src/style/output.css
@@ -496,7 +496,7 @@ video {
 }
 
 .button--nav {
-  width: 13rem;
+  width: 16rem;
   padding-right: 1.5rem;
 }
 
@@ -650,11 +650,6 @@ video {
   margin-bottom: 1rem !important;
 }
 
-.my-auto {
-  margin-top: auto !important;
-  margin-bottom: auto !important;
-}
-
 .-ml-24 {
   margin-left: -6rem !important;
 }
@@ -753,16 +748,8 @@ video {
   list-style-type: none !important;
 }
 
-.flex-col {
-  flex-direction: column !important;
-}
-
 .items-center {
   align-items: center !important;
-}
-
-.justify-end {
-  justify-content: flex-end !important;
 }
 
 .justify-center {
@@ -834,6 +821,11 @@ video {
   padding-bottom: 3.5rem !important;
 }
 
+.py-16 {
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
+}
+
 .py-2 {
   padding-top: 0.5rem !important;
   padding-bottom: 0.5rem !important;
@@ -849,30 +841,20 @@ video {
   padding-bottom: 0.75rem !important;
 }
 
-.py-8 {
-  padding-top: 2rem !important;
-  padding-bottom: 2rem !important;
-}
-
-.py-16 {
-  padding-top: 4rem !important;
-  padding-bottom: 4rem !important;
-}
-
 .pb-2 {
   padding-bottom: 0.5rem !important;
 }
 
-.pl-36 {
-  padding-left: 9rem !important;
+.pl-52 {
+  padding-left: 13rem !important;
 }
 
 .pl-6 {
   padding-left: 1.5rem !important;
 }
 
-.pr-2 {
-  padding-right: 0.5rem !important;
+.pr-1 {
+  padding-right: 0.25rem !important;
 }
 
 .pr-20 {
@@ -881,14 +863,6 @@ video {
 
 .pr-4 {
   padding-right: 1rem !important;
-}
-
-.pr-1 {
-  padding-right: 0.25rem !important;
-}
-
-.pl-52 {
-  padding-left: 13rem !important;
 }
 
 .text-2xl {
@@ -911,17 +885,16 @@ video {
   line-height: 1.75rem !important;
 }
 
-.text-5xl {
-  font-size: 3rem !important;
-  line-height: 1 !important;
-}
-
 .font-bold {
   font-weight: 700 !important;
 }
 
-.italic {
-  font-style: italic !important;
+.uppercase {
+  text-transform: uppercase !important;
+}
+
+.capitalize {
+  text-transform: capitalize !important;
 }
 
 .text-blue-dark {
