--- a/src/style/output.css
+++ b/src/style/output.css
@@ -499,7 +499,7 @@ video {
   display: inline-flex;
   border-radius: 1.5rem;
   --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
   padding-left: 1rem;
@@ -512,7 +512,11 @@ video {
 }
 
 .button--disabled:hover {
+  --tw-scale-x: 1;
+  --tw-scale-y: 1;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   cursor: not-allowed;
+  opacity: 1;
 }
 
 .button--nav {
